# try_blocks

./: .gitignore  .gitmodules  CHANGELOG.md  Cargo.toml  LICENSE  README.md  project-words.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: dependabot.yml  deploy-rust.yml  rust-stability.yml  rust.yml
tests/: test_compilation.rs  test_new.rs  test_original.rs
tests/compilation/: Cargo.toml
tests/compilation/examples/: fail_indirect_into.rs  fail_indirect_into.stderr  fail_missing_into.rs  fail_missing_into.stderr  fail_via_return_type.rs  fail_via_return_type.stderr  pass_guide.rs
